Made some refactoring to make the code more concise
- fixed a bug that prevented hose and monster disappearing when level is won
- removed unnecessary .vs, packages, and .idea

--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ publish/
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
+packages/
 
 # Windows Azure Build Output
 csx
@@ -150,6 +150,8 @@ ClientBin/
 *.[Pp]ublish.xml
 *.pfx
 *.publishsettings
+.vs/
+.idea/
 
 # RIA/Silverlight projects
 Generated_Code/
